package javaLang.bridge.demo1;

public interface Implementor {

    void operationImpl();
}
