@startuml
abstract class Abstraction{
    + operation() : void
}

interface Implementor{
    + operationImpl() : void
}

class RefinedAbstraction{}

class ConcreteImplementorA{}

class ConcreteImplementorB{}


Abstraction <-left- RefinedAbstraction
Abstraction o-- Implementor
Implementor <.. ConcreteImplementorA
Implementor <.. ConcreteImplementorB

@enduml